[FEAT] 백오피스 고객 조회 / 디자인 변경

--- a/src/main/resources/templates/backoffice/fragments/fragment.html
+++ b/src/main/resources/templates/backoffice/fragments/fragment.html
@@ -166,7 +166,7 @@
     <footer th:fragment="footer" class="sticky-footer bg-white">
         <div class="container my-auto">
             <div class="copyright text-center my-auto">
-                <span>Copyright &copy; H.Livv 2024</span>
+                <span>Copyright &copy; H.Livv All Rights Reserved 2024</span>
             </div>
         </div>
     </footer>
