--- a/src/main/resources/templates/backoffice/home.html
+++ b/src/main/resources/templates/backoffice/home.html
@@ -267,7 +267,7 @@
                                     <div class="card bg-primary text-white shadow">
                                         <div class="card-body">
                                             Primary
-                                            <div class="text-white-50 small">#4e73df</div>
+                                            <div class="text-white-50 small">#2f4d30</div>
                                         </div>
                                     </div>
                                 </div>
