--- a/src/main/resources/templates/backoffice/login.html
+++ b/src/main/resources/templates/backoffice/login.html
@@ -47,8 +47,8 @@
                                     <form class="member" role="form" th:action="@{/backoffice/login}" method="post">
                                         <div class="form-group">
                                             <input type="text" class="form-control form-control-user"
-                                                id="loginId" aria-describedby="emailHelp"
-                                                placeholder="Enter Email Address...">
+                                                   id="loginId" aria-describedby="emailHelp"
+                                                   placeholder="Enter Login ID">
                                         </div>
                                         <div class="form-group">
                                             <input type="password" class="form-control form-control-user"
@@ -61,7 +61,7 @@
                                                     Me</label>
                                             </div>
                                         </div>
-                                        <button type="submit" class="btn btn-primary btn-user btn-block">
+                                        <button type="submit" id="login" class="btn btn-primary btn-user btn-block">
                                             Login
                                         </button>
 <!--                                        <a href="home.html" class="btn btn-primary btn-user btn-block">-->
@@ -80,7 +80,7 @@
 <!--                                        <a class="small" href="../../../../../../../../Users/sangwon/Desktop/html들/sb-admin-2/forgot-password.html">Forgot Password?</a>-->
 <!--                                    </div>-->
                                     <div class="text-center">
-                                        <a class="small" href="/backoffice/register">h.Livv 관리자 등록 요청</a>
+                                        <a class="small" href="/backoffice/register">h.Livv 관리자 등록 요청 Register</a>
                                     </div>
                                 </div>
                             </div>
