--- a/src/main/resources/templates/backoffice/login.html
+++ b/src/main/resources/templates/backoffice/login.html
@@ -21,6 +21,7 @@
     <link th:href="@{/backoffice/css/sb-admin-2.min.css}" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script th:src="@{/backoffice/js/login.js}"></script>
+    <link th:href="@{/backoffice/css/backoffice.css}" rel="stylesheet" type="text/css">
 
 
 </head>
@@ -38,7 +39,9 @@
                     <div class="card-body p-0">
                         <!-- Nested Row within Card Body -->
                         <div class="row">
-                            <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+                            <div class="col-lg-6 d-none d-lg-block">
+                                <img class="login-image" th:src="@{/backoffice/img/logo_background.svg}">
+                            </div>
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
