--- a/src/main/resources/templates/backoffice/fragments/fragment.html
+++ b/src/main/resources/templates/backoffice/fragments/fragment.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Fragment</title>
+
+    <link th:href="@{/backoffice/css/backoffice.css}" rel="stylesheet" type="text/css">
+    <script th:src="@{/backoffice/js/login.js}"></script>
 </head>
 <body>
 
@@ -10,9 +13,12 @@
     <ul th:fragment="sidebar" class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
         <!-- Sidebar - Brand -->
         <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/backoffice/home">
-            <!--                <div class="sidebar-brand-icon rotate-n-15">-->
-            <!--                    <i class="fas fa-laugh-wink"></i>-->
-            <!--                </div>-->
+<!--            <div class="sidebar-brand-icon rotate-n-15">-->
+
+<!--                -->
+<!--&lt;!&ndash;                               <i class="fas fa-laugh-wink"></i>&ndash;&gt;-->
+<!--            </div>-->
+            <img class="logo-icon" th:src="@{/backoffice/img/logo_icon.svg}"/>
             <div class="sidebar-brand-text mx-3">h.Livv Admin</div>
         </a>
         <!-- Divider -->
@@ -166,7 +172,7 @@
     <footer th:fragment="footer" class="sticky-footer bg-white">
         <div class="container my-auto">
             <div class="copyright text-center my-auto">
-                <span>Copyright &copy; H.Livv 2024</span>
+                <span>Copyright &copy; H.Livv All Rights Reserved 2024</span>
             </div>
         </div>
     </footer>
