--- a/src/main/resources/templates/backoffice/login.html
+++ b/src/main/resources/templates/backoffice/login.html
@@ -21,6 +21,7 @@
     <link th:href="@{/backoffice/css/sb-admin-2.min.css}" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script th:src="@{/backoffice/js/login.js}"></script>
+    <link th:href="@{/backoffice/css/backoffice.css}" rel="stylesheet" type="text/css">
 
 
 </head>
@@ -38,7 +39,9 @@
                     <div class="card-body p-0">
                         <!-- Nested Row within Card Body -->
                         <div class="row">
-                            <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+                            <div class="col-lg-6 d-none d-lg-block">
+                                <img class="login-image" th:src="@{/backoffice/img/logo_background.svg}">
+                            </div>
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
@@ -47,8 +50,8 @@
                                     <form class="member" role="form" th:action="@{/backoffice/login}" method="post">
                                         <div class="form-group">
                                             <input type="text" class="form-control form-control-user"
-                                                id="loginId" aria-describedby="emailHelp"
-                                                placeholder="Enter Email Address...">
+                                                   id="loginId" aria-describedby="emailHelp"
+                                                   placeholder="Enter Login ID">
                                         </div>
                                         <div class="form-group">
                                             <input type="password" class="form-control form-control-user"
@@ -61,7 +64,7 @@
                                                     Me</label>
                                             </div>
                                         </div>
-                                        <button type="submit" class="btn btn-primary btn-user btn-block">
+                                        <button type="submit" id="login" class="btn btn-primary btn-user btn-block">
                                             Login
                                         </button>
 <!--                                        <a href="home.html" class="btn btn-primary btn-user btn-block">-->
@@ -80,7 +83,7 @@
 <!--                                        <a class="small" href="../../../../../../../../Users/sangwon/Desktop/html들/sb-admin-2/forgot-password.html">Forgot Password?</a>-->
 <!--                                    </div>-->
                                     <div class="text-center">
-                                        <a class="small" href="/backoffice/register">h.Livv 관리자 등록 요청</a>
+                                        <a class="small" href="/backoffice/register">h.Livv 관리자 등록 요청 Register</a>
                                     </div>
                                 </div>
                             </div>
