--- a/src/main/resources/templates/backoffice/members.html
+++ b/src/main/resources/templates/backoffice/members.html
@@ -13,10 +13,12 @@
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link th:href="@{/backoffice/css/backoffice.css}" rel="stylesheet" type="text/css">
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script th:src="@{/backoffice/js/login.js}"></script>
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
 
@@ -39,6 +41,58 @@
 
                 <!-- Topbar -->
                 <div th:replace="~{backoffice/fragments/fragment :: header}"></div>
+
+                <div class="container-fluid">
+                    <div class="card shadow mb-4">
+                        <div class="card-header py-3">
+                            <h6 class="m-0 font-weight-bold text-primary">고객 목록</h6>
+                        </div>
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                                    <thead>
+                                    <tr>
+                                        <th>이름</th>
+                                        <th>ID</th>
+                                        <th>Email</th>
+                                        <th>전화번호</th>
+                                        <th>포인트</th>
+                                        <th>가입일</th>
+                                        <th>인테리어타입</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr th:each="member : ${members}">
+                                        <td th:text="${member.name}">ID</td>
+                                        <td th:text="${member.loginId}">Name</td>
+                                        <td th:text="${member.email}">Description</td>
+                                        <td th:text="${member.phone}">Description</td>
+                                        <td th:text="${member.points}">Description</td>
+                                        <td th:text="${member.signupDate}">Description</td>
+                                        <td th:text="${member.interiorType}">Description</td>
+                                    </tr>
+<!--                                    <tr>-->
+<!--                                        <td>Brielle Williamson</td>-->
+<!--                                        <td>Integration Specialist</td>-->
+<!--                                        <td>New York</td>-->
+<!--                                        <td>61</td>-->
+<!--                                        <td>2012/12/02</td>-->
+<!--                                        <td>$372,000</td>-->
+<!--                                    </tr>-->
+<!--                                    <tr>-->
+<!--                                        <td>Herrod Chandler</td>-->
+<!--                                        <td>Sales Assistant</td>-->
+<!--                                        <td>San Francisco</td>-->
+<!--                                        <td>59</td>-->
+<!--                                        <td>2012/08/06</td>-->
+<!--                                        <td>$137,500</td>-->
+<!--                                    </tr>-->
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <!-- End of Topbar -->
 
                 <!-- Begin Page Content -->
@@ -69,12 +123,12 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Logout</h5>
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">×</span>
                     </button>
                 </div>
-                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+                <div class="modal-body">로그아웃을 하실래요?</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
                     <a class="btn btn-primary" href="login.html">Logout</a>
@@ -94,11 +148,11 @@
     <script src="js/sb-admin-2.min.js"></script>
 
     <!-- Page level plugins -->
-    <script src="vendor/chart.js/Chart.min.js"></script>
+    <script src="vendor/datatables/jquery.dataTables.min.js"></script>
+    <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
     <!-- Page level custom scripts -->
-    <script src="js/demo/chart-area-demo.js"></script>
-    <script src="js/demo/chart-pie-demo.js"></script>
+    <script src="js/demo/datatables-demo.js"></script>
 
 </body>
 
