--- a/src/main/resources/templates/backoffice/fragments/fragment.html
+++ b/src/main/resources/templates/backoffice/fragments/fragment.html
@@ -18,7 +18,7 @@
 <!--                -->
 <!--&lt;!&ndash;                               <i class="fas fa-laugh-wink"></i>&ndash;&gt;-->
 <!--            </div>-->
-            <img class="logo-icon" th:src="@{/backoffice/img/logo_icon.svg}"/>
+            <img class="logo-icon" th:src="@{/backoffice/img/logo_white_back.svg}"/>
             <div class="sidebar-brand-text mx-3">h.Livv Admin</div>
         </a>
         <!-- Divider -->
@@ -69,12 +69,12 @@
             </div>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="">
+            <a class="nav-link" href="/backoffice/products">
                 <i class="fas fa-fw fa-chart-area"></i>
                 <span>상품 관리</span></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="">
+            <a class="nav-link" href="/backoffice/restores">
                 <i class="fas fa-fw fa-chart-area"></i>
                 <span>리스토어 관리</span></a>
         </li>
