--- a/src/main/resources/templates/backoffice/login.html
+++ b/src/main/resources/templates/backoffice/login.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>hLivv</title>
+    <title>H.Livv Admin</title><link rel="icon" type="image/png" sizes="32x32" th:href="@{/backoffice/img/favicon-32x32.png}">
 
     <!-- Custom fonts for this template-->
     <link th:href="@{vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
