--- a/src/main/resources/templates/backoffice/members.html
+++ b/src/main/resources/templates/backoffice/members.html
@@ -9,16 +9,19 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>hLivv</title>
-
+    <title>H.Livv Admin</title>
+    <link rel="icon" type="image/png" sizes="32x32" th:href="@{/backoffice/img/favicon-32x32.png}">
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link th:href="@{/backoffice/css/backoffice.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/backoffice/css/modal.css}" rel="stylesheet" type="text/css">
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script th:src="@{/backoffice/js/login.js}"></script>
+    <script th:src="@{/backoffice/js/modal.js}"></script>
+<!--    <script th:src="@{/backoffice/js/page.js}"></script>-->
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
 
@@ -58,40 +61,54 @@
                                         <th>전화번호</th>
                                         <th>포인트</th>
                                         <th>가입일</th>
-                                        <th>인테리어타입</th>
+                                        <th>고객등급</th>
+<!--                                        <th>인테리어타입</th>-->
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    <tr th:each="member : ${members}">
-                                        <td th:text="${member.name}">ID</td>
+                                    <tr th:data-id="${member.loginId}" th:data-name="${member.name}" th:data-email="${member.email}"
+                                        th:data-phone="${member.phone}" th:data-points="${member.points}"
+                                        th:data-signupdate="${member.signupDate}" th:data-interiortype="${member.interiorType}"
+                                        th:data-grade="${member.grade}"
+                                        class="modal-item member-modal" data-toggle="modal" data-target="#userDetailModal" th:each="member : ${members} " >
+                                        <td>
+                                            <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                                            <span th:text="${member.name}"></span>
+                                        </td>
                                         <td th:text="${member.loginId}">Name</td>
                                         <td th:text="${member.email}">Description</td>
                                         <td th:text="${member.phone}">Description</td>
                                         <td th:text="${member.points}">Description</td>
                                         <td th:text="${member.signupDate}">Description</td>
-                                        <td th:text="${member.interiorType}">Description</td>
+                                        <td th:text="${member.grade}">Description</td>
+<!--                                        <td th:text="${member.interiorType}">Description</td>-->
                                     </tr>
-<!--                                    <tr>-->
-<!--                                        <td>Brielle Williamson</td>-->
-<!--                                        <td>Integration Specialist</td>-->
-<!--                                        <td>New York</td>-->
-<!--                                        <td>61</td>-->
-<!--                                        <td>2012/12/02</td>-->
-<!--                                        <td>$372,000</td>-->
-<!--                                    </tr>-->
-<!--                                    <tr>-->
-<!--                                        <td>Herrod Chandler</td>-->
-<!--                                        <td>Sales Assistant</td>-->
-<!--                                        <td>San Francisco</td>-->
-<!--                                        <td>59</td>-->
-<!--                                        <td>2012/08/06</td>-->
-<!--                                        <td>$137,500</td>-->
-<!--                                    </tr>-->
                                     </tbody>
                                 </table>
+                                <div class="col-sm-12 col-md-7" style="text-align: center">
+                                    <div class="dataTables_paginate paging_simple_numbers" id="dataTable_paginate">
+                                        <ul class="pagination">
+                                            <li th:class="|paginate_button page-item ${members.first ? 'disabled' : ''}|">
+                                                <a href="#" aria-controls="dataTable" data-dt-idx="0" tabindex="0" class="page-link" th:href="@{/backoffice/members(page=${members.number - 1})}">Previous</a>
+                                            </li>
+                                            <li th:each="pageNum : ${#numbers.sequence(1, members.totalPages)}" th:class="|paginate_button page-item ${pageNum  == members.number + 1 ? 'active' : ''}|">
+                                                <a href="#" aria-controls="dataTable" th:data-dt-idx="${pageNum}" tabindex="0" class="page-link" th:text="${pageNum}" th:href="@{/backoffice/members(page=${pageNum - 1})}"></a>
+                                            </li>
+                                            <li th:class="|paginate_button page-item ${members.last ? 'disabled' : ''}|">
+                                                <a href="#" aria-controls="dataTable" data-dt-idx="2" tabindex="0" class="page-link" th:href="@{/backoffice/members(page=${members.number + 1})}">Next</a>
+                                            </li>
+                                        </ul>
+
+                                    </div>
+                                </div>
                             </div>
+
                         </div>
                     </div>
+
+
+
+
                 </div>
                 <!-- End of Topbar -->
 
@@ -117,27 +134,10 @@
         <i class="fas fa-angle-up"></i>
     </a>
 
-    <!-- Logout Modal-->
-    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Logout</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">로그아웃을 하실래요?</div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <!-- Bootstrap core JavaScript-->
+    <div th:replace="~{backoffice/fragments/modal :: logoutModal}"></div>
+    <div th:replace="~{backoffice/fragments/modal :: userDetailModal}"></div>
+
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
@@ -147,12 +147,12 @@
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
 
-    <!-- Page level plugins -->
-    <script src="vendor/datatables/jquery.dataTables.min.js"></script>
-    <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
+<!--    &lt;!&ndash; Page level plugins &ndash;&gt;-->
+<!--    <script src="vendor/datatables/jquery.dataTables.min.js"></script>-->
+<!--    <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>-->
 
-    <!-- Page level custom scripts -->
-    <script src="js/demo/datatables-demo.js"></script>
+<!--    &lt;!&ndash; Page level custom scripts &ndash;&gt;-->
+<!--    <script src="js/demo/datatables-demo.js"></script>-->
 
 </body>
 
