--- a/src/main/resources/templates/backoffice/fragments/modal.html
+++ b/src/main/resources/templates/backoffice/fragments/modal.html
@@ -52,7 +52,7 @@
                             <h5 data-v-0c9f3f9e="" class="title">고객 이름</h5>
                             <div data-v-0c9f3f9e="" class="unit_content">
                                 <input data-v-5ee806c3="" type="text" placeholder="이름" autocomplete="off" maxlength="25" class="input_txt text_fill"/>
-                                <p id="name" data-v-24a03828="" data-v-6d416020="" class="desc desc_modify" data-v-0c9f3f9e=""> 이상원 </p>
+                                <p id="name" data-v-24a03828="" data-v-6d416020="" class="desc desc_modify" data-v-0c9f3f9e="">  </p>
                                 <button data-v-14ec1f2e="" data-v-6d416020="" type="button" class="btn btn_modify outlinegrey small" data-v-0c9f3f9e=""> 변경 </button>
                                 <button type="button" class="btn btn_save outlinegrey small" style="display: none">저장</button>
                                 <button type="button" class="btn btn_cancel outlinegrey small" style="display: none">취소</button>
@@ -72,7 +72,7 @@
                             <h5 data-v-0c9f3f9e="" class="title">Email</h5>
                             <div data-v-0c9f3f9e="" class="unit_content">
                                 <input data-v-5ee806c3="" type="text" placeholder="이름" autocomplete="off" maxlength="25" class="input_txt text_fill"/>
-                                <p id="email" data-v-24a03828="" data-v-6d416020="" class="desc desc_modify" data-v-0c9f3f9e=""> 이상원 </p>
+                                <p id="email" data-v-24a03828="" data-v-6d416020="" class="desc desc_modify" data-v-0c9f3f9e="">  </p>
                                 <button data-v-14ec1f2e="" data-v-6d416020="" type="button" class="btn btn_modify outlinegrey small" data-v-0c9f3f9e=""> 변경 </button>
                                 <button type="button" class="btn btn_save outlinegrey small" style="display: none">저장</button>
                                 <button type="button" class="btn btn_cancel outlinegrey small" style="display: none">취소</button>
@@ -92,7 +92,7 @@
                             <h5 data-v-0c9f3f9e="" class="title">포인트</h5>
                             <div data-v-0c9f3f9e="" class="unit_content">
                                 <input data-v-5ee806c3="" type="text" placeholder="이름" autocomplete="off" maxlength="25" class="input_txt text_fill"/>
-                                <p id="point" data-v-24a03828="" data-v-6d416020="" class="desc desc_modify" data-v-0c9f3f9e=""> 이상원 </p>
+                                <p id="point" data-v-24a03828="" data-v-6d416020="" class="desc desc_modify" data-v-0c9f3f9e="">  </p>
                                 <button data-v-14ec1f2e="" data-v-6d416020="" type="button" class="btn btn_modify outlinegrey small" data-v-0c9f3f9e=""> 변경 </button>
                                 <button type="button" class="btn btn_save outlinegrey small" style="display: none">저장</button>
                                 <button type="button" class="btn btn_cancel outlinegrey small" style="display: none">취소</button>
@@ -175,7 +175,7 @@
                         <h5 data-v-0c9f3f9e="" class="title">상품 가격</h5>
                         <div data-v-0c9f3f9e="" class="unit_content">
                             <input data-v-5ee806c3="" type="text" autocomplete="off" maxlength="25" class="input_txt text_fill"/>
-                            <p id="productPrice" data-v-24a03828="" data-v-6d416020="" class="desc desc_modify" data-v-0c9f3f9e=""> 이상원 </p>
+                            <p id="productPrice" data-v-24a03828="" data-v-6d416020="" class="desc desc_modify" data-v-0c9f3f9e="">  </p>
                             <button data-v-14ec1f2e="" data-v-6d416020="" type="button" class="btn btn_modify outlinegrey small" data-v-0c9f3f9e=""> 변경 </button>
                             <button type="button" class="btn btn_save outlinegrey small" style="display: none">저장</button>
                             <button type="button" class="btn btn_cancel outlinegrey small" style="display: none">취소</button>
